# Air724UDemo

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  ReadMe.md  bluetooth.Kconfig  bluetooth.cpp  bluetooth.h  build.bat  buildenv.bat  config.bat  cpp.Kconfig  cpp.cpp  csdk.Kconfig  debug.c  debug.h  kconfig.h  main.c  main.cpp  main.h  menuconfig.bat  network.Kconfig  network.c  network.cpp  network.h  syscalls.c  sysmem.c
MQTT/: CMakeLists.txt
appstack/: appmqtt.Kconfig  appmqtt.cpp  appmqtt.hpp  appmqtt_onenetddevice.cpp  appmqtt_onenetddevice.h  appmqtt_smgs.cpp  appmqtt_smgs.h  appsocket.cpp  appsocket.hpp  appstack.Kconfig  appstack.cpp  appstack.hpp  onenetonejson.cpp  onenetonejson.h  onenettoken.c  onenettoken.h  onenettokencpp.cpp  onenettokencpp.h
bluetooth/: gatt_profile_uuid.h
lib/MQTT/: MQTTAir724UG.c  MQTTAir724UG.h  MQTTClient.c  MQTTClient.h
lib/SSL/: APPSSL.c  APPSSL.h
lib/jsoncpp/: CMakeLists.txt
lib/printf/: CMakeLists.txt
lib/protobuf-c/: CMakeLists.txt
rc/: .gitignore  CMakeLists.txt  RC.c  RC_internal.h  fsgen.cpp
rc/fs/: banner
sffs/sffs/: ReadMe.txt
sffs/sffscfggen/: CMakeLists.txt  sffscfggen.cpp
